  * Properly handle the file manager copy dialog in
    FileManagerLauncherIcon and in StorageLauncherIcon. (LP: #1575452,
    LP: #1609845)
  * Correctly position the force quit dialog when scaling is different
    than 1.0 (LP: #1637991)
  * GnomeSession: Retrieve the session id using dbus if $XDG_SESSION_ID
    is not set
  * Round gtk scaling factor to closest integer. (LP: #1649736)

  [ Marco Trevisan (Treviño) ]
  * LockScreenController: use InputMonitor to get all the events and
    hide the Blank Window (LP: #1321075)
  * LockScreenController: use input monitor to get the events to switch
    monitor (LP: #1316862)
  * LauncherOptions: use track_obj to manage option changes (LP:
    #1622995)
  * UnityScreen: toggle gestures recognition on lock (LP: #1645507)

  [ Kai-Heng Feng ]
  * UnitySettings: If scale-factor is not set, find and set right scale
    for HiDPI displays.

  [ Eleni Maria Stea ]
  * shouldn't create blur rectangles when there's no blur, skips the
    blur rects processing in low gfx.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200

unity (7.4.0+16.04.20160906-0ubuntu1) xenial; urgency=medium

  [ Marco Trevisan (Treviño) ]
  * SwitcherView: always disable animations when in lowgfx mode (LP:
    #1602784)

  [ Andrea Azzarone ]
  * When locked discard damages from windows below lockscreen. (LP:
    #1605180)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * Make sure the switcher detail view is properly scaled. Also scale
    the xy_offset to make sure the switcher and launcher do not overlap.
    (LP: #1605256)
  * Close session dialog on first ESC. (LP: #1521116)
  * Filter out scrolling envents for FilterExpanderLabel. (LP: #1604632)
  * Disable menu discovery animation if MenusDiscoveryDuration is 0.
    (LP: #942962)
  * Redraw fake decorations on window resize. (LP: #940470)