@@ -46,6 +46,7 @@ public:
   virtual std::string UserName() const = 0;
   virtual std::string HostName() const = 0;
   virtual void UserIconFile(std::function<void(std::string const&)> const&) const = 0;
+  virtual bool AutomaticLogin() const = 0;
 
   virtual void ScreenSaverActivate() = 0;
   virtual void ScreenSaverDeactivate() = 0;
